Menu jumping fixed, menu for welsh language aligned

--- a/assets/css/less/components/application.less
+++ b/assets/css/less/components/application.less
@@ -6,6 +6,7 @@
 
 	padding: 0 35px;
 	min-width: 640px;
+        z-index: 300;
 
 	&-map {
 
