--- a/assets/css/less/components/navigation/navigation-header.less
+++ b/assets/css/less/components/navigation/navigation-header.less
@@ -35,6 +35,8 @@
 	li {
 
 		.background("background-header.png");
+                
+                margin-bottom: 100px;
 
 		&:nth-child(1) {
 
